# atalanta

./: .contest.json  .gitignore  .tool-versions  CHANGELOG.md  Cargo.toml  DEVELOPMENT.md  Makefile  README.md  RELEASE.md  dprint.json  package.json  rumdl.toml  run-that-app
.github/workflows/: ci.yml  release.yml  win.yml
doc/: DEVELOPMENT.md  RELEASE.md
features/: cuke.feature  fish-completions.feature  makefile.feature  multiple_stacks.feature  node_no_scripts.feature  node_npm.feature  node_yarn.feature  ruby_bundler.feature  rust_cargo.feature
features/help/: help.feature
features/make/: failing_task.feature  install.feature  list.feature  list_available.feature  makefile.feature  multiple_matches.feature  run.feature  run_failing.feature  run_multiple.feature  run_ok.feature  run_unknown.feature  setup.feature
features/node/: failing_task.feature  list.feature  list_available.feature  no_scripts.feature  node_no_scripts.feature  npm.feature  run.feature  run_unknown.feature  setup.feature  yarn.feature  yarn_nested_workspace.feature  yarn_same_folder.feature
features/node/npm/: install.feature  list.feature  run.feature  run_failing.feature  run_unknown.feature  setup.feature
features/node/npm/nested_workspaces/: nested.feature
features/node/npm/no_workspaces/: install.feature
features/node/yarn/: nested_workspace.feature  no_workspaces.feature
features/ruby/: install.feature  rake_bundler.feature  setup.feature
features/rust/: cargo.feature  install.feature  list.feature  run.feature  run_multiple.feature  run_ok.feature  run_unknown.feature  setup.feature
fixtures/make/: Makefile
src/: cli.rs  errors.rs  lib.rs  main.rs
src/cli/: dialog.rs  exit_code.rs  mod.rs  parse.rs  print_stacks.rs
src/commands/: completions_fish.rs  help.rs  install.rs  list.rs  mod.rs  run.rs  setup.rs
src/commands/completions/: fish.rs  mod.rs
src/domain/: command.rs  mod.rs  outcome.rs  stack.rs  stacks.rs  task.rs  workspace.rs
src/probes/: makefile.rs  mod.rs  node_npm.rs  node_yarn.rs
src/runnables/: makefile.rs  mod.rs
src/stacks/: makefile.rs  mod.rs  node_npm.rs  node_yarn.rs  ruby_bundler.rs  rust_cargo.rs
src/strings/: matching.rs  mod.rs
tests/: cucumber.rs  lints.rs
