[package]
name = "atalanta"
version = "0.0.0"
edition = "2021"
rust-version = "1.61"

[dependencies]
ansi_term = "0.12.1"
once_cell = "1.15.0"
regex = { version = "1.6.0", default-features = false, features = ["std"] }
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0"
tabwriter = "1.2.1"

[dev-dependencies]
async-trait = "0.1"
cucumber = "0.15"
futures = "0.3"
itertools = "0.10.5"
pretty = { package = "pretty_assertions", version = "1.3.0" }
rand = "0.8.5"
strip-ansi-escapes = "0.1.1"
tokio = { version = "1.21.2", features = ["fs", "io-util", "macros", "process", "rt"] }

[[bin]]
name = "a"
path = "src/main.rs"
doc = false

[[test]]
name = "cucumber" # this should be the same as the filename of your test target
harness = false # allows Cucumber to print output instead of libtest
test = false # don't run this as part of "cargo test"

[profile.release]
debug = 0
strip = "symbols"
lto = true
panic = 'abort'
opt-level = "z"
codegen-units = 1
