[package]
name = "atalanta"
version = "0.0.0"
edition = "2024"
rust-version = "1.81"

[dependencies]
ansi_term = "0.12.1"
big_s = "1.0.2"
once_cell = "1.20.3"
regex = { version = "1.9.6", default-features = false, features = ["std"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0"
tabwriter = "1.4.1"

[dev-dependencies]
async-trait = "0.1"
cucumber = "0.21.1"
futures = "0.3"
itertools = "0.13.0"
pretty = { package = "pretty_assertions", version = "1.4.1" }
rand = "0.8.5"
strip-ansi-escapes = "0.2.1"
tokio = { version = "1.29.1", features = ["fs", "io-util", "macros", "process", "rt"] }

[[bin]]
name = "a"
path = "src/main.rs"
doc = false

[[test]]
name = "cucumber" # this should be the same as the filename of your test target
harness = false # allows Cucumber to print output instead of libtest
test = false # don't run this as part of "cargo test"

[profile.release]
debug = 0
strip = "symbols"
lto = true
panic = 'abort'
opt-level = "z"
codegen-units = 1

[lints.clippy]
pedantic = "warn"

[workspace.lints.rust]
unsafe_code = "forbid"
